@startuml

title __MAPPERS's Class Diagram__\n

  namespace com.railroad.rest.exception {
    namespace mappers {
      class com.railroad.rest.exception.mappers.CustomExceptionMapper {
          + mapResponse()
      }
    }
  }
  

  namespace com.railroad.rest.exception {
    namespace mappers {
      class com.railroad.rest.exception.mappers.EntityExistsExceptionMapper {
          + toResponse()
      }
    }
  }
  

  namespace com.railroad.rest.exception {
    namespace mappers {
      interface com.railroad.rest.exception.mappers.ICustomExceptiontMapper {
          {abstract} + mapResponse()
      }
    }
  }
  

  namespace com.railroad.rest.exception {
    namespace mappers {
      class com.railroad.rest.exception.mappers.NoResultExceptionMapper {
          + toResponse()
      }
    }
  }
  

  namespace com.railroad.rest.exception {
    namespace mappers {
      class com.railroad.rest.exception.mappers.PersistenceExceptionMapper {
          + toResponse()
      }
    }
  }
  

  namespace com.railroad.rest.exception {
    namespace mappers {
      class com.railroad.rest.exception.mappers.UpdateExceptionMapper {
          + toResponse()
      }
    }
  }
  

  com.railroad.rest.exception.mappers.CustomExceptionMapper .up.|> com.railroad.rest.exception.mappers.ICustomExceptiontMapper
  com.railroad.rest.exception.mappers.EntityExistsExceptionMapper .up.|> javax.ws.rs.ext.ExceptionMapper
  com.railroad.rest.exception.mappers.NoResultExceptionMapper .up.|> javax.ws.rs.ext.ExceptionMapper
  com.railroad.rest.exception.mappers.NoResultExceptionMapper o-- com.railroad.rest.exception.mappers.ICustomExceptiontMapper : em
  com.railroad.rest.exception.mappers.PersistenceExceptionMapper .up.|> javax.ws.rs.ext.ExceptionMapper
  com.railroad.rest.exception.mappers.PersistenceExceptionMapper o-- com.railroad.rest.exception.mappers.ICustomExceptiontMapper : em
  com.railroad.rest.exception.mappers.UpdateExceptionMapper .up.|> javax.ws.rs.ext.ExceptionMapper
  com.railroad.rest.exception.mappers.UpdateExceptionMapper o-- com.railroad.rest.exception.mappers.ICustomExceptiontMapper : em


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
